Profile / Notifications / Fixed the layout issues.

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -2,6 +2,9 @@
 .profile-page {
     margin-bottom: 1rem;
     margin-top: -1rem;
+    .menu {
+        border-bottom: 2px solid #464646;
+    }
     &__left {
         padding: 0px 32px;
         display: flex;
